force-app/main/default/objects/Contact/fields/Areas_of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Expertise__c</fullName>
    <label>Areas of Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>