force-app/main/default/objects/Contact/fields/Decision_Making_Authority__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Authority__c</fullName>
    <label>Decision Making Authority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>