force-app/main/default/objects/Contact/fields/Education_Background__c.field-meta.xml
<CustomField>
    <fullName>Education_Background__c</fullName>
    <label>Education Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>