force-app/main/default/objects/Contact/fields/Investment_Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>Investment_Committee_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Committee Member</label>
    <type>Checkbox</type>
</CustomField>