force-app/main/default/objects/Contact/fields/Investment_Thesis_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Investment_Thesis_Alignment__c</fullName>
    <label>Investment Thesis Alignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>