force-app/main/default/objects/Contact/fields/Investor_Role__c.field-meta.xml
<CustomField>
    <fullName>Investor_Role__c</fullName>
    <label>Investor Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managing Partner</fullName>
            </value>
            <value>
                <fullName>General Partner</fullName>
            </value>
            <value>
                <fullName>Limited Partner</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>