force-app/main/default/objects/Contact/fields/Preferred_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Meeting_Type__c</fullName>
    <label>Preferred Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>