force-app/main/default/objects/Contact/fields/Previous_Investments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Investments__c</fullName>
    <label>Previous Investments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>