force-app/main/default/objects/Contact/fields/Responsiveness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness_Rating__c</fullName>
    <label>Responsiveness Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>